scale to 0 make vertex un-movable in edit mode #33497

Closed
opened 2012-12-12 17:24:03 +01:00 by Krantz Geoffroy · 5 comments

%%%So to reproduce it's easy.
Default scene,
go in the right panel and set Z (for eg)scale value to 0,
go in edit mode and try to move a vertex.
The same problem appear when you set dimension Z(for eg) value to 0

I've seen when in 3D view you make s+Z+0 then it set the value to 0.000001 or something really low.
Maybe you should check if the user enter the 0 value in the panel and set to 0.000001 too.

ubuntu 12.04 64bits, last svn, I don't know since when.
%%%

%%%So to reproduce it's easy. Default scene, go in the right panel and set Z (for eg)scale value to 0, go in edit mode and try to move a vertex. The same problem appear when you set dimension Z(for eg) value to 0 I've seen when in 3D view you make s+Z+0 then it set the value to 0.000001 or something really low. Maybe you should check if the user enter the 0 value in the panel and set to 0.000001 too. ubuntu 12.04 64bits, last svn, I don't know since when. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Scaling to zero should be allowed, it's useful sometimes.

The problem here is the matrix inverse function, it fails and doesn't return a useful result. Not sure what would be the best way to solve that, we could try to make it handle this case better. Maybe adding an epsilon to the diagonal, inverting the 2x2 matrix subset, using a pseudoinverse, would need some testing to find out what works best.%%%

%%%Scaling to zero should be allowed, it's useful sometimes. The problem here is the matrix inverse function, it fails and doesn't return a useful result. Not sure what would be the best way to solve that, we could try to make it handle this case better. Maybe adding an epsilon to the diagonal, inverting the 2x2 matrix subset, using a pseudoinverse, would need some testing to find out what works best.%%%

%%%If an object is scaled to zero along one axis in object-mode it is practically impossible to move that vertex in edit-mode along this axis. Any movement away from zero would result in infinity in edit-mode (Grab G / Division by zero). But it should be possible to set the location by hand, bypassing this calculation.%%%

%%%If an object is scaled to zero along one axis in object-mode it is practically impossible to move that vertex in edit-mode along this axis. Any movement away from zero would result in infinity in edit-mode (Grab G / Division by zero). But it should be possible to set the location by hand, bypassing this calculation.%%%

%%%Fix in svn now, using a pseudoinverse. The way it works is still a bit strange as it no movement along the axis is not possible, but at least it's possible to move vertices.%%%

%%%Fix in svn now, using a pseudoinverse. The way it works is still a bit strange as it no movement along the axis is not possible, but at least it's possible to move vertices.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33497
No description provided.